# parlona

./: LICENSE  README.md  example_usage.py  pyproject.toml  test_package.py
.venv-packaging/: pyvenv.cfg
src/parlona/: __init__.py  models.py  pipeline.py
src/parlona/llm/: __init__.py  client.py
src/parlona/stt/: __init__.py  config.py  engine.py
